--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <header>
       <h1>
-        Gadzhi Kharkharov
+        Hi hi hi there
       </h1>
       <h2>
-        Interface designer at <a href="http://stampsy.com"> Stampsy</a>.
+        I design interfaces at <a href="http://stampsy.com"> Stampsy</a>.
       </h2>
     </header>
 
