changed header to name

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     <header>
       <h1>
-        Hi hi hi there
+        Gadzhi Kharkharov
       </h1>
       <h2>
-        I design interfaces at <a href="http://stampsy.com"> Stampsy</a>.
+        Interface designer at <a href="http://stampsy.com">Stampsy</a>.
       </h2>
     </header>
 
