update to content and style yo

--- a/index.html
+++ b/index.html
@@ -25,26 +25,28 @@
 
     <header>
       <h1>
-        Hi, hi, hi there!
+        I design interfaces at <a href="http://stampsy.com">Stampsy</a>. I also try to shoot photos.
       </h1>
-      <h2>
-        I design interfaces at <a href="http://stampsy.com">Stampsy</a>.
-      </h2>
     </header>
 
     <section>
-      <h3>
-        <a href="mailto:kkga@me.com">kkga@me.com</a>
-      </h3>
-      <h3>
+      <h2>
+        Around Web
+      </h2>
+      <ul class="links">
+        <li>
         <a href="http://twitter.com/_kkga">twitter.com/_kkga</a>
-      </h3>
-      <h3>
+        </li>
+        <li>
         <a href="http://dribbble.com/gadzhi">dribbble.com/gadzhi</a>
-      </h3>
-      <h3>
+        </li>
+        <li>
         <a href="http://flickr.com/gadzhi">flickr.com/gadzhi</a>
-      </h3>
+        </li>
+        <li>
+        <a href="mailto:kkga@me.com">kkga@me.com</a>
+        </li>
+      </ul>
     </section>
 
   </body>
