--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
     <header>
       <h1>
-        I design interfaces at <a href="http://stampsy.com">Stampsy</a>. I also try to shoot photos.
+        I design interfaces at <a href="http://stampsy.com">Stampsy</a>. I try to shoot photos. I share links and occasional thoughts. I show pieces of my work. You can email me.
       </h1>
     </header>
 
-    <section>
+<!--     <section>
       <h2>
         Around Web
       </h2>
@@ -47,7 +47,7 @@
         <a href="mailto:kkga@me.com">kkga@me.com</a>
         </li>
       </ul>
-    </section>
+    </section> -->
 
   </body>
 </html>
