--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 
     <header>
       <h1>
-        I design interfaces at <a href="http://stampsy.com">Stampsy</a>. I try to shoot photos. I share links and occasional thoughts. I show pieces of my work. You can email me.
+        I design interfaces at <a href="http://stampsy.com">Stampsy</a>.<br>
+        I try to shoot photos.<br>
+        I share links and occasional thoughts.<br>
+        I show pieces of my work.<br>
+        You can email me.
       </h1>
     </header>
 
