--- a/index.html
+++ b/index.html
@@ -25,33 +25,13 @@
 
     <header>
       <h1>
-        I design interfaces at <a href="http://stampsy.com">Stampsy</a>.<br>
-        I try to shoot photos.<br>
-        I share links and occasional thoughts.<br>
-        I show pieces of my work.<br>
-        You can email me.
+        <a href="http://stampsy.com">I design interfaces at Stampsy.</a><br>
+        <a href="http://flickr.com/gadzhi">I try to shoot photos.</a><br>
+        <a href="http://twitter.com/_kkga">I share links and occasional thoughts.</a><br>
+        <a href="http://dribbble.com/gadzhi">I show pieces of my work.</a><br>
+        <a href="mailto:kkga@me.com">You can email me.</a>
       </h1>
     </header>
-
-<!--     <section>
-      <h2>
-        Around Web
-      </h2>
-      <ul class="links">
-        <li>
-        <a href="http://twitter.com/_kkga">twitter.com/_kkga</a>
-        </li>
-        <li>
-        <a href="http://dribbble.com/gadzhi">dribbble.com/gadzhi</a>
-        </li>
-        <li>
-        <a href="http://flickr.com/gadzhi">flickr.com/gadzhi</a>
-        </li>
-        <li>
-        <a href="mailto:kkga@me.com">kkga@me.com</a>
-        </li>
-      </ul>
-    </section> -->
 
   </body>
 </html>
