--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="http://stampsy.com">I design interfaces at Stampsy.</a><br>
       </h1>
       <h1>
-        <a href="http://flickr.com/gadzhi">I try to shoot photos.</a><br>
+        <a href="http://flickr.com/gadzhi">I try to shoot pictures.</a><br>
       </h1>
       <h1>
         <a href="http://twitter.com/_kkga">I share links and occasional thoughts.</a><br>
