--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script type="text/javascript" src="//use.typekit.net/dby2wed.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -12,10 +10,12 @@
       ga('create', 'UA-42410414-1', 'kkga.me');
       ga('send', 'pageview');
     </script>
+
+    <script type="text/javascript" src="//use.typekit.net/dby2wed.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
     <meta charset="utf-8">
-    <title>
-      Gadzhi Kharkharov
-    </title>
+    <title>Gadzhi Kharkharov</title>
     <meta name="author" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,22 +24,20 @@
   <body>
 
     <header>
-      <h1>
-        <a href="http://stampsy.com">I design interfaces at Stampsy.</a><br>
-      </h1>
-      <h1>
-        <a href="http://flickr.com/gadzhi">I try to shoot pictures.</a><br>
-      </h1>
-      <h1>
-        <a href="http://twitter.com/_kkga">I share links and occasional thoughts.</a><br>
-      </h1>
-      <h1>
-        <a href="http://dribbble.com/gadzhi">I show pieces of my work.</a><br>
-      </h1>
-      <h1>
-        <a href="mailto:kkga@me.com">You can email me.</a>
-      </h1>
+      <h1 class="h1">Gadzhi Kharkharov</h1>
+      <p>User Interface Designer/<br>Currently at <a href="http://stampsy.com">Stampsy</a></p>
     </header>
+
+    <section>
+      <h2 class="h1">Contact</h2>
+      <p><a href="mailto:kkga@me.com">kkga@me.com</a></p>
+    </section>
+
+    <section>
+      <p><a href="http://twitter.com/_kkga">Twitter</a></p>
+      <p><a href="http://dribbble.com/gadzhi">Dribbble</a></p>
+      <p><a href="http://flickr.com/gadzhi">Flickr</a></p>
+    </section>
 
   </body>
 </html>
