--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </section>
 
     <section>
-      <p><a href="http://twitter.com/_kkga">Twitter</a></p>
-      <p><a href="http://dribbble.com/gadzhi">Dribbble</a></p>
-      <p><a href="http://flickr.com/gadzhi">Flickr</a></p>
+      <p><a href="http://twitter.com/_kkga">Twitter</a> /
+      <a href="http://dribbble.com/gadzhi">Dribbble</a> /
+      <a href="http://flickr.com/gadzhi">Flickr</a></p>
     </section>
 
   </body>
