--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <header>
       <h1 class="h1">Gadzhi Kharkharov</h1>
-      <p>User Interface Designer/<br>Currently at <a href="http://stampsy.com">Stampsy</a></p>
+      <p>User Interface Designer / Currently at <a href="http://stampsy.com">Stampsy</a></p>
     </header>
 
     <section>
