--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
     <header>
       <h1 class="h1">Gadzhi Kharkharov</h1>
-      <p>User Interface Designer / Currently at <a href="http://stampsy.com">Stampsy</a></p>
+      <p>User Interface Designer/<br>Currently at <a href="http://stampsy.com">Stampsy</a></p>
     </header>
 
     <section>
-      <p><a href="http://twitter.com/_kkga">Twitter</a> /
-      <a href="http://dribbble.com/gadzhi">Dribbble</a> /
-      <a href="http://flickr.com/gadzhi">Flickr</a> /
+      <p><a href="http://twitter.com/_kkga">Twitter</a>/
+      <a href="http://dribbble.com/gadzhi">Dribbble</a>/
+      <a href="http://flickr.com/gadzhi">Flickr</a>/
       <a href="mailto:kkga@me.com">Email</a>
     </section>
 
