--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
     </header>
 
     <section>
-      <p><a href="http://twitter.com/_kkga">Twitter</a> /
-      <a href="http://dribbble.com/gadzhi">Dribbble</a> /
-      <a href="http://flickr.com/gadzhi">Flickr</a> /
-      <a href="mailto:kkga@me.com">Email</a>
+      <p>
+      <a href="http://twitter.com/_kkga">Twitter</a> / <a href="http://dribbble.com/gadzhi">Dribbble</a> / <a href="http://flickr.com/gadzhi">Flickr</a> / <a href="mailto:kkga@me.com">Email</a>
+      </p>
     </section>
 
   </body>
