--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
     </header>
 
     <section>
-      <p>
-      <a href="http://twitter.com/_kkga">Twitter</a> / <a href="http://dribbble.com/gadzhi">Dribbble</a> / <a href="http://flickr.com/gadzhi">Flickr</a> / <a href="mailto:kkga@me.com">Email</a>
-      </p>
+      <h2 class="h1">Contact</h2>
+      <p><a href="mailto:kkga@me.com">kkga@me.com</a></p>
+    </section>
+
+    <section>
+      <p><a href="http://twitter.com/_kkga">Twitter</a> /
+      <a href="http://dribbble.com/gadzhi">Dribbble</a> /
+      <a href="http://flickr.com/gadzhi">Flickr</a></p>
     </section>
 
   </body>
