--- a/index.html
+++ b/index.html
@@ -29,14 +29,10 @@
     </header>
 
     <section>
-      <h2 class="h1">Contact</h2>
-      <p><a href="mailto:kkga@me.com">kkga@me.com</a></p>
-    </section>
-
-    <section>
-      <p><a href="http://twitter.com/_kkga">Twitter</a> /
-      <a href="http://dribbble.com/gadzhi">Dribbble</a> /
-      <a href="http://flickr.com/gadzhi">Flickr</a></p>
+      <p><a href="http://twitter.com/_kkga">Twitter</a></p>
+      <p><a href="http://dribbble.com/gadzhi">Dribbble</a></p>
+      <p><a href="http://flickr.com/gadzhi">Flickr</a></p>
+      <p><a href="mailto:kkga@me.com">Email</a></p>
     </section>
 
   </body>
