--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
 
     <header>
-      <h1 class="h1">Gadzhi Kharkharov</h1>
+      <h1 class="h1 black">Gadzhi Kharkharov</h1>
       <p>User Interface Designer/<br>Currently at <a href="http://stampsy.com">Stampsy</a></p>
     </header>
 
