fix twitter link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <section>
-      <p><a href="http://twitter.com/_kkga">Twitter</a></p>
+      <p><a href="http://twitter.com/kkga_">Twitter</a></p>
       <p><a href="http://dribbble.com/gadzhi">Dribbble</a></p>
       <p><a href="http://flickr.com/gadzhi">Flickr</a></p>
       <p><a href="mailto:kkga@me.com">Email</a></p>
