--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <section>
       <p><a href="http://twitter.com/kkga_">Twitter</a></p>
       <p><a href="http://dribbble.com/gadzhi">Dribbble</a></p>
+      <p><a href="http://github.com/kkga">GitHub</a></p>
       <p><a href="http://flickr.com/gadzhi">Flickr</a></p>
       <p><a href="mailto:kkga@me.com">Email</a></p>
     </section>
