--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
       ga('send', 'pageview');
     </script>
 
-    <script type="text/javascript" src="//use.typekit.net/dby2wed.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-
     <meta charset="utf-8">
     <title>Gadzhi Kharkharov</title>
     <meta name="author" content="">
@@ -24,17 +21,17 @@
   <body>
 
     <header>
-      <h1 class="h1 black">Gadzhi Kharkharov</h1>
+      <h1>Gadzhi Kharkharov</h1>
       <p>User Interface Designer/<br>Currently at <a href="http://stampsy.com">Stampsy</a></p>
     </header>
 
-    <section>
-      <p><a href="http://twitter.com/kkga_">Twitter</a></p>
-      <p><a href="http://dribbble.com/gadzhi">Dribbble</a></p>
-      <p><a href="http://github.com/kkga">GitHub</a></p>
-      <p><a href="http://flickr.com/gadzhi">Flickr</a></p>
-      <p><a href="mailto:kkga@me.com">Email</a></p>
-    </section>
+    <ul class="links">
+      <li><a href="http://twitter.com/kkga_">Twitter</a></li>
+      <li><a href="http://dribbble.com/gadzhi">Dribbble</a></li>
+      <li><a href="http://github.com/kkga">GitHub</a></li>
+      <li><a href="http://flickr.com/gadzhi">Flickr</a></li>
+      <li><a href="mailto:kkga@me.com">Email</a></li>
+    </ul>
 
   </body>
 </html>
