--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="author" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/i.css">
+    <link rel="stylesheet" href="i.css">
   </head>
   <body>
 
