--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       ga('send', 'pageview');
     </script>
 
+    <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
+
     <meta charset="utf-8">
     <title>Gadzhi Kharkharov</title>
     <meta name="author" content="">
