--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       ga('send', 'pageview');
     </script>
 
-    <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
     <meta charset="utf-8">
     <title>Gadzhi Kharkharov</title>
