--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 
     <header>
       <h1>Gadzhi Kharkharov</h1>
-      <p>User Interface Designer/<br>Currently at <a href="http://stampsy.com">Stampsy</a></p>
+      <p>User Interface Designer<br>Currently at <a href="http://stampsy.com">Stampsy</a></p>
     </header>
 
     <ul class="links">
-      <li><a href="http://twitter.com/kkga_">Twitter</a></li>
-      <li><a href="http://github.com/kkga">GitHub</a></li>
-      <li><a href="http://dribbble.com/gadzhi">Dribbble</a></li>
-      <li><a href="http://flickr.com/gadzhi">Flickr</a></li>
-      <li><a href="mailto:kkga@me.com">Email</a></li>
+      <li><a href="http://twitter.com/kkga_">twitter</a></li>
+      <li><a href="http://github.com/kkga">github</a></li>
+      <li><a href="http://dribbble.com/gadzhi">dribbble</a></li>
+      <li><a href="http://flickr.com/gadzhi">flickr</a></li>
+      <li><a href="mailto:kkga@me.com">email</a></li>
     </ul>
 
   </body>
