--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       ga('send', 'pageview');
     </script>
 
-    <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Mono:400,700' rel='stylesheet' type='text/css'>
 
     <meta charset="utf-8">
     <title>Gadzhi Kharkharov</title>
@@ -22,17 +22,16 @@
   </head>
   <body>
 
-    <header>
+    <header class="header">
       <h1>Gadzhi Kharkharov</h1>
-      <p>User Interface Designer<br>Currently at <a href="http://stampsy.com">Stampsy</a></p>
+      <p>User Interface Designer/<br />Currently at <a href="http://stampsy.com">Stampsy</a></p>
     </header>
-
     <ul class="links">
-      <li><a href="http://twitter.com/kkga_">twitter</a></li>
-      <li><a href="http://github.com/kkga">github</a></li>
-      <li><a href="http://dribbble.com/gadzhi">dribbble</a></li>
-      <li><a href="http://flickr.com/gadzhi">flickr</a></li>
-      <li><a href="mailto:kkga@me.com">email</a></li>
+      <li class="links-link"><a href="http://twitter.com/kkga_">twitter</a></li>
+      <li class="links-link"><a href="http://github.com/kkga">github</a></li>
+      <li class="links-link"><a href="http://dribbble.com/gadzhi">dribbble</a></li>
+      <li class="links-link"><a href="http://flickr.com/gadzhi">flickr</a></li>
+      <li class="links-link"><a href="mailto:kkga@me.com">email</a></li>
     </ul>
 
   </body>
