--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <header class="header">
       <h1>Gadzhi Kharkharov</h1>
-      <p>User Interface Designer</p>
+      <p>~designer</p>
       <br/>
       <p>Now: freelance<br/> Past: <a href="http://stampsy.com">Stampsy</a></p>
     </header>
