--- a/index.html
+++ b/index.html
@@ -23,17 +23,27 @@
   <body>
 
     <header class="header">
+      <p class="myface">
+        😑
+      </p>
       <h1>Gadzhi Kharkharov</h1>
-      <p>~designer</p>
-      <br/>
-      <p>Now: freelance<br/> Past: <a href="http://stampsy.com">Stampsy</a></p>
+      <p>designer</p>
     </header>
+
+    <br/>
+
+    <p>
+      now: freelance<br/> past: <a href="http://stampsy.com">Stampsy</a>
+    </p>
+
+    <br/>
+
     <ul class="links">
-      <li class="links-link"><a href="http://twitter.com/kkga_">twitter</a></li>
-      <li class="links-link"><a href="http://github.com/kkga">github</a></li>
-      <li class="links-link"><a href="http://dribbble.com/gadzhi">dribbble</a></li>
-      <li class="links-link"><a href="http://flickr.com/gadzhi">flickr</a></li>
-      <li class="links-link"><a href="mailto:kkga@me.com">email</a></li>
+      <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">🐥</a></li>
+      <li class="links-link"><a href="http://github.com/kkga" title="GitHub">🐙</a></li>
+      <li class="links-link"><a href="http://dribbble.com/gadzhi" title="Dribbble">🏀</a></li>
+      <li class="links-link"><a href="mailto:kkga@me.com" title="Email">
+📧</a></li>
     </ul>
 
   </body>
