--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
   <body>
 
     <header class="header">
-      <p class="myface">
-        😑
-      </p>
-      <h1>Gadzhi Kharkharov</h1>
-      <p>designer</p>
+      <h1>😑 Gadzhi Kharkharov, designer</h1>
     </header>
 
     <p>
