--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
       ga('send', 'pageview');
     </script>
 
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Mono:400,700' rel='stylesheet' type='text/css'>
-
     <meta charset="utf-8">
     <title>Gadzhi Kharkharov</title>
     <meta name="author" content="">
@@ -23,7 +21,7 @@
   <body>
 
     <header class="header">
-      <h1>😑 Gadzhi Kharkharov, designer</h1>
+      <h1>Gadzhi Kharkharov, designer</h1>
     </header>
 
     <p>
