--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <p>
-      now: freelance<br/> past: <a href="http://stampsy.com">Stampsy</a>
+      now:&nbsp;freelance / past:&nbsp;<a href="http://stampsy.com">Stampsy</a>
     </p>
 
     <ul class="links">
