--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
     <p>
       now:&nbsp;freelance / past:&nbsp;<a href="http://stampsy.com">Stampsy</a>
     </p>
+    
+    <p>
+      <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>
+    </p>
 
     <ul class="links">
       <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">🐥</a></li>
       <li class="links-link"><a href="http://github.com/kkga" title="GitHub">🐙</a></li>
       <li class="links-link"><a href="http://dribbble.com/gadzhi" title="Dribbble">🏀</a></li>
-      <li class="links-link"><a href="mailto:kkga@me.com" title="Email">
-📧</a></li>
     </ul>
 
   </body>
