--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       <h1>Gadzhi Kharkharov, ~designer</h1>
     </header>
 
-    <p>
+    <p class="about">
       now:&nbsp;freelance / past:&nbsp;<a href="http://stampsy.com">Stampsy</a>
     </p>
     
-    <p>
+    <p class="email">
       <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>
     </p>
 
