--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
   <body>
 
     <header class="header">
-      <h1>Gadzhi Kharkharov, ~designer</h1>
+      <h1>😑 Gadzhi Kharkharov, ~designer</h1>
     </header>
 
     <p class="about">
-      now:&nbsp;freelance / past:&nbsp;<a href="http://stampsy.com">Stampsy</a>
+      now:&nbsp; freelance / past:&nbsp;<a href="http://stampsy.com">Stampsy</a>
     </p>
     
     <p class="email">
-      <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>
+      <a href="mailto:kkga@me.com" title="Email">✉️ kkga@me.com</a>
     </p>
 
     <ul class="links">
-      <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">🐥</a></li>
-      <li class="links-link"><a href="http://github.com/kkga" title="GitHub">🐙</a></li>
-      <li class="links-link"><a href="http://dribbble.com/gadzhi" title="Dribbble">🏀</a></li>
+      <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">🐥 twitter</a></li>
+      <li class="links-link"><a href="http://github.com/kkga" title="GitHub">🐙 github</a></li>
+      <li class="links-link"><a href="http://dribbble.com/gadzhi" title="Dribbble">🏀 dribbble</a></li>
     </ul>
 
   </body>
