--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </p>
     
     <p class="email">
-      <a href="mailto:kkga@me.com" title="Email">✉️ kkga@me.com</a>
+      get in touch: <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>
     </p>
 
     <ul class="links">
