--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     </p>
     
     <p class="email">
-      get in touch: <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>
+      contact: <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>
     </p>
 
     <ul class="links">
-      <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">🐥 twitter</a></li>
-      <li class="links-link"><a href="http://github.com/kkga" title="GitHub">🐙 github</a></li>
-      <li class="links-link"><a href="http://dribbble.com/gadzhi" title="Dribbble">🏀 dribbble</a></li>
+      <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">twitter</a> / </li>
+      <li class="links-link"><a href="http://github.com/kkga" title="GitHub">github</a>  / </li>
+      <li class="links-link"><a href="http://dribbble.com/gadzhi" title="Dribbble">dribbble</a></li>
     </ul>
 
   </body>
