--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
 
     <header class="header">
-      <h1>😑 Gadzhi Kharkharov, ~designer</h1>
+      <h1><span class="myface">😑</span> Gadzhi Kharkharov, ~designer</h1>
     </header>
 
     <p class="about">
