--- a/index.html
+++ b/index.html
@@ -24,20 +24,22 @@
       <span class="myface">😑</span> 
       <h1>Gadzhi Kharkharov, ~designer</h1>
     </header>
-
-    <p class="about">
-      now:&nbsp; freelance / past:&nbsp;<a href="http://stampsy.com">Stampsy</a>
-    </p>
     
-    <p class="email">
-      contact: <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>
-    </p>
+    <div class="info">
+      <p class="about">
+        now:&nbsp; freelance / past:&nbsp;<a href="http://stampsy.com">Stampsy</a>
+      </p>
+    
+      <p class="email">
+        contact: <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>
+      </p>
 
-    <ul class="links">
-      <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">twitter</a> / </li>
-      <li class="links-link"><a href="http://github.com/kkga" title="GitHub">github</a>  / </li>
-      <li class="links-link"><a href="http://dribbble.com/gadzhi" title="Dribbble">dribbble</a></li>
-    </ul>
+      <ul class="links">
+        <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">twitter</a> / </li>
+        <li class="links-link"><a href="http://github.com/kkga" title="GitHub">github</a>  / </li>
+        <li class="links-link"><a href="http://dribbble.com/gadzhi" title="Dribbble">dribbble</a></li>
+      </ul>
+    </div>
 
   </body>
 </html>
