--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     
     <div class="info">
       <p class="about">
-        now:&nbsp; freelance / past:&nbsp;<a href="http://stampsy.com">Stampsy</a>
+        freelance / past:&nbsp;<a href="http://stampsy.com">Stampsy</a>
       </p>
     
       <p class="email">
-        contact: <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>
+        <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>
       </p>
 
       <ul class="links">
