--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     
     <div class="info">
       <p class="about">
-        Currently freelance. Previously at &nbsp;<a href="http://stampsy.com">Stampsy</a>.
+        Currently freelance. Previously at <a href="http://stampsy.com">Stampsy</a>.
       </p>
     
       <p class="email">
-        Get in touch: <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>.
+        <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>
       </p>
 
       <ul class="links">
