--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       ga('create', 'UA-42410414-1', 'kkga.me');
       ga('send', 'pageview');
     </script>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
 
     <meta charset="utf-8">
     <title>Gadzhi Kharkharov</title>
