--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
         Currently freelance. Previously at <a href="http://stampsy.com">Stampsy</a>.
       </p>
     
-      <p class="email">
-        <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>
-      </p>
+      <!--<p class="email">-->
+      <!--  <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>-->
+      <!--</p>-->
 
       <ul class="links">
+        <li class="links-link"><a href="mailto:kkga@me.com" title="Email">kkga@me.com</a> / </li>
         <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">twitter</a> / </li>
         <li class="links-link"><a href="http://github.com/kkga" title="GitHub">github</a>  / </li>
         <li class="links-link"><a href="http://dribbble.com/gadzhi" title="Dribbble">dribbble</a></li>
