--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
     <span class="myface">😑</span> 
 
     <header class="header">
-      <h1>Gadzhi Kharkharov, ~designer</h1>
+      <h1>Gadzhi Kharkharov<br>~designer</h1>
     </header>
     
     <div class="info">
       <p class="about">
-        Currently freelance. Previously at <a href="http://stampsy.com">Stampsy</a>.
+        Currently freelance.<br>
+        Previously at <a href="http://stampsy.com">Stampsy</a>.
       </p>
     
-      <!--<p class="email">-->
-      <!--  <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>-->
-      <!--</p>-->
+      <p class="email">
+        <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>
+      </p>
 
       <ul class="links">
-        <li class="links-link"><a href="mailto:kkga@me.com" title="Email">kkga@me.com</a> / </li>
-        <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">twitter</a> / </li>
-        <li class="links-link"><a href="http://github.com/kkga" title="GitHub">github</a>  / </li>
+        <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">twitter</a></li>
+        <li class="links-link"><a href="http://github.com/kkga" title="GitHub">github</a></li>
         <li class="links-link"><a href="http://dribbble.com/gadzhi" title="Dribbble">dribbble</a></li>
       </ul>
     </div>
