--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
     <span class="myface">😑</span> 
 
     <header class="header">
-      <h1>Gadzhi Kharkharov<br>~designer</h1>
+      <h1>Gadzhi Kharkharov, ~designer</h1>
     </header>
     
     <div class="info">
       <p class="about">
-        Currently freelance.<br>
-        Previously at <a href="http://stampsy.com">Stampsy</a>.
+        Currently freelance. Previously at <a href="http://stampsy.com">Stampsy</a>.
       </p>
     
       <p class="email">
@@ -38,9 +37,9 @@
       </p>
 
       <ul class="links">
-        <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">twitter</a></li>
-        <li class="links-link"><a href="http://github.com/kkga" title="GitHub">github</a></li>
-        <li class="links-link"><a href="http://dribbble.com/gadzhi" title="Dribbble">dribbble</a></li>
+        <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">twtr</a> /</li>
+        <li class="links-link"><a href="http://github.com/kkga" title="GitHub">gthb</a> /</li>
+        <li class="links-link"><a href="http://dribbble.com/gadzhi" title="Dribbble">drbl</a></li>
       </ul>
     </div>
 
