--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     
-    <span class="myface">😑</span> 
+    <span class="face">😑</span> 
 
     <header class="header">
       <h1>Gadzhi Kharkharov, ~designer</h1>
