--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </p>
 
     <ul class="links">
-      <li class="links-link"><a href="mailto:kkga@me.com" title="Email">📧kkga@me.com</a> /</li>
+      <li class="links-link"><a href="mailto:kkga@me.com" title="Email">kkga@me.com</a> /</li>
       <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">🐥twtr</a> /</li>
       <li class="links-link"><a href="http://github.com/kkga" title="GitHub">🐙gthb</a> /</li>
       <li class="links-link"><a href="http://dribbble.com/gadzhi" title="Dribbble">🏀drbl</a></li>
