--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     </header>
     
     <p class="about">
-      Currently freelance. Previously at <a href="http://stampsy.com">🔗Stampsy</a>.
+      Currently freelance. Previously at <a href="http://stampsy.com">Stampsy</a>.
     </p>
 
     <ul class="links">
       <li class="links-link"><a href="mailto:kkga@me.com" title="Email">kkga@me.com</a> /</li>
-      <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">🐥twtr</a> /</li>
-      <li class="links-link"><a href="http://github.com/kkga" title="GitHub">🐙gthb</a> /</li>
-      <li class="links-link"><a href="http://dribbble.com/gadzhi" title="Dribbble">🏀drbl</a></li>
+      <li class="links-link"><a href="http://twitter.com/kkga_" title="Twitter">twtr</a> /</li>
+      <li class="links-link"><a href="http://github.com/kkga" title="GitHub">gthb</a> /</li>
+      <li class="links-link"><a href="http://dribbble.com/gadzhi" title="Dribbble">drbl</a></li>
     </ul>
 
   </body>
