--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       
       body {
         padding: 1.5rem;
-        font-size: 1rem;
+        font-size: 1.125rem;
         font-family: -apple-system, -system, sans-serif;
         line-height: 1.5;
         color: #222;
@@ -36,7 +36,7 @@
       }
       
       h1 {
-        font-size: 1.125rem;
+        font-size: inherit;
         margin-bottom: 2em;
       }
 
