--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h1>Gadzhi Kharkharov, ~designer</h1>
 
     <p>
-      Currently&nbsp;freelance. Previously&nbsp;at&nbsp;<a href="http://stampsy.com">Stampsy</a>.
+      Currently&nbsp;at&nbsp;<a href="http://webflow.com">Webflow</a>. Previously&nbsp;at&nbsp;<a href="http://stampsy.com">Stampsy</a>.
     </p>
 
     <p>
