--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
 
   html,
   body {
-    /*margin: 0;*/
-    height: 100%;
+    /*height: 100%;*/
   }
 
   body {
-    /*padding: 1.5rem;*/
+    margin: 3em;
     font-family: -apple-system, -system, sans-serif;
     line-height: 1.5;
+  }
+
+  figure {
+    font-size: 2rem;
+    margin-left: -0.125em;
   }
 
   h1 {
@@ -29,21 +33,13 @@
   a:hover {
     color: #FF504C;
   }
-
-  .face {
-    font-size: 2rem;
-    margin-left: -0.125em;
-  }
 </style>
 
 <body>
-
-  <div class="face">😑</div>
+  <figure>😑</figure>
   <h1>Gadzhi Kharkharov, ~designer</h1>
 
-  <p>
-    Currently&nbsp;at&nbsp;<a href="http://webflow.com">Webflow</a>. Previously&nbsp;at&nbsp;<a href="http://stampsy.com">Stampsy</a>.
-  </p>
+  Currently&nbsp;at&nbsp;<a href="http://webflow.com">Webflow</a>. Previously&nbsp;at&nbsp;<a href="http://stampsy.com">Stampsy</a>.
 
   <p>
     <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>&nbsp;/
