--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   }
 
   body {
-    margin: 3em;
+    margin: 2em;
     font-family: -apple-system, -system, sans-serif;
     line-height: 1.5;
   }
@@ -39,11 +39,13 @@
   <figure>😑</figure>
   <h1>Gadzhi Kharkharov, ~designer</h1>
 
-  Currently&nbsp;at&nbsp;<a href="http://webflow.com">Webflow</a>. Previously&nbsp;at&nbsp;<a href="http://stampsy.com">Stampsy</a>.
+  <p>
+    Currently&nbsp;at&nbsp;<a href="http://webflow.com">Webflow</a>. Previously&nbsp;at&nbsp;<a href="http://stampsy.com">Stampsy</a>.
+  </p>
 
   <p>
-    <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>&nbsp;/
-    <a href="http://twitter.com/kkga_" title="Twitter">twtr</a>&nbsp;/
-    <a href="http://github.com/kkga" title="GitHub">gthb</a>&nbsp;/
+    <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>&nbsp;
+    <a href="http://twitter.com/kkga_" title="Twitter">twtr</a>&nbsp;
+    <a href="http://github.com/kkga" title="GitHub">gthb</a>&nbsp;
     <a href="http://dribbble.com/gadzhi" title="Dribbble">drbl</a>
   </p>
