--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <p>
     <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>&nbsp;
-    <a href="http://twitter.com/kkga_" title="Twitter">twtr</a>&nbsp;
-    <a href="http://github.com/kkga" title="GitHub">gthb</a>&nbsp;
-    <a href="http://dribbble.com/gadzhi" title="Dribbble">drbl</a>
+    <a href="http://twitter.com/kkga_" title="Twitter">twitter</a>&nbsp;
+    <a href="http://github.com/kkga" title="GitHub">github</a>&nbsp;
+    <a href="http://dribbble.com/gadzhi" title="Dribbble">dribbble</a>
   </p>
