--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Gadzhi Kharkharov</title>
 
 <style>
-  /** { box-sizing: border-box; }*/
-
-  html,
-  body {
-    /*height: 100%;*/
-  }
-
   body {
     margin: 2em;
     font-family: -apple-system, -system, sans-serif;
@@ -18,7 +11,7 @@
   }
 
   figure {
-    font-size: 2rem;
+    font-size: 2em;
     margin-left: -0.125em;
   }
 
@@ -49,3 +42,4 @@
     <a href="http://github.com/kkga" title="GitHub">github</a>&nbsp;
     <a href="http://dribbble.com/gadzhi" title="Dribbble">dribbble</a>
   </p>
+</body>
