--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     font-family: -apple-system, -system, sans-serif;
     line-height: 1.5;
   }
+  
+  @media (min-width: 48em) {
+    body {
+      font-size: 200%;
+    }
+  }
 
   figure {
     font-size: 2em;
@@ -31,6 +37,10 @@
 <body>
   <figure>😑</figure>
   <h1>Gadzhi Kharkharov, ~designer</h1>
+  
+  <p>
+    Currently&nbsp;at&nbsp;<a href="http://webflow.com">Webflow</a>. Previously&nbsp;at&nbsp;<a href="http://stampsy.com">Stampsy</a>.
+  </p>
 
   <p>
     <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>&nbsp;
