--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   </p>
 
   <p>
-    <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>&nbsp;
-    <a href="http://twitter.com/kkga_" title="Twitter">twitter</a>&nbsp;
-    <a href="http://github.com/kkga" title="GitHub">github</a>&nbsp;
+    <a href="mailto:kkga@me.com" title="Email">kkga@me.com</a>&nbsp;/
+    <a href="http://twitter.com/kkga_" title="Twitter">twitter</a>&nbsp;/
+    <a href="http://github.com/kkga" title="GitHub">github</a>&nbsp;/
     <a href="http://dribbble.com/gadzhi" title="Dribbble">dribbble</a>
   </p>
 </body>
