--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </p>
 
   <p>
-    <a href="mailto:gadzhi.kha@gmail.com" title="Email">gadzhi.kha@gmail.com</a>&nbsp;/
+    <a href="mailto:gadzhi.kha@gmail.com" title="Email">email</a>&nbsp;/
     <a href="http://twitter.com/kkga_" title="Twitter">twitter</a>&nbsp;/
     <a href="http://github.com/kkga" title="GitHub">github</a>&nbsp;/
     <a href="http://dribbble.com/gadzhi" title="Dribbble">dribbble</a>
