--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     margin-left: -0.125em;
   }
 
-  h1 {
+  h1, h2 {
     font-size: inherit;
   }
 
@@ -34,11 +34,12 @@
   <p>
     Currently&nbsp;at&nbsp;<a href="http://webflow.com">Webflow</a>. Previously&nbsp;at&nbsp;<a href="http://stampsy.com">Stampsy</a>.
   </p>
-
-  <p>
-    <a href="mailto:gadzhi.kha@gmail.com" title="Email">email</a>&nbsp;/
-    <a href="http://twitter.com/kkga_" title="Twitter">twitter</a>&nbsp;/
-    <a href="http://github.com/kkga" title="GitHub">github</a>&nbsp;/
-    <a href="http://dribbble.com/gadzhi" title="Dribbble">dribbble</a>
-  </p>
+  
+  <h2>Links</h2>
+  <ul>
+    <li><a href="mailto:gadzhi.kha@gmail.com" title="Email">email</a></li>
+    <li><a href="http://twitter.com/kkga_" title="Twitter">twitter</a></li>
+    <li><a href="http://github.com/kkga" title="GitHub">github</a></li>
+    <li><a href="http://dribbble.com/gadzhi" title="Dribbble">dribbble</a></li>
+  </ul>
 </body>
