--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     margin-left: -0.125em;
   }
 
-  h1, h2 {
+  h1 {
     font-size: inherit;
+    font-weight: 800;
   }
 
   a {
@@ -24,6 +25,14 @@
   }
   a:hover {
     color: #FF504C;
+  }
+  
+  ul {
+    padding: 0;
+    list-style: none;
+  }
+  li {
+    display: inline-block;
   }
 </style>
 
@@ -35,7 +44,6 @@
     Currently&nbsp;at&nbsp;<a href="http://webflow.com">Webflow</a>. Previously&nbsp;at&nbsp;<a href="http://stampsy.com">Stampsy</a>.
   </p>
   
-  <h2>Links</h2>
   <ul>
     <li><a href="mailto:gadzhi.kha@gmail.com" title="Email">email</a></li>
     <li><a href="http://twitter.com/kkga_" title="Twitter">twitter</a></li>
