--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   body {
     margin: 2em;
     font-family: -apple-system, -system, sans-serif;
-    line-height: 1.5;
+    line-height: 1.6;
   }
 
   figure {
@@ -35,7 +35,7 @@
     display: inline-block;
   }
   li::after {
-    content: '&nbsp;/&nbsp;';
+    content: ' / ';
   }
 </style>
 
