--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   li {
     display: inline-block;
   }
-  li::after:not(:last-child) {
+  li:not(:last-child)::after {
     content: ' / ';
   }
 </style>
